# vilangu

./: .gitignore  Makefile  README.org  docker-compose.yml  dune-project  run.sh  vilangu.opam
.build/: Dockerfile
backend/: CMakeLists.txt
backend/cmake/modules/: AddTlang.cmake
backend/include/tlang/Basic/: Version.h  Version.inc.in
backend/include/tlang/Codegen/: Ir_codegen_visitor.h
backend/include/tlang/Deserializer/: Api.h  Class_ir.h  Expr_ir.h  Function_ir.h  Ir_visitor.h  Program_ir.h  Protobuf_utils.h  Stmt_ir.h  Type_ir.h  frontend.pb.h
backend/lib/: CMakeLists.txt
backend/lib/Basic/: CMakeLists.txt  Class_ir.cpp  Expr_ir.cpp  Function_ir.cpp  Ir_codegen_visitor.cpp  Program_ir.cpp  Protobuf_utils.cpp  Stmt_ir.cpp  Type_ir.cpp  Version.cpp  expr_codegen.cpp  extern_functions_codegen.cpp
backend/lib/Codegen/: CMakeLists.txt  Ir_codegen_visitor.cpp  class_codegen.cpp  expr_codegen.cpp  extern_functions_codegen.cpp  function_codegen.cpp  stmt_codegen.cpp  type_codegen.cpp
backend/lib/Deserializer/: Program_ir.cpp
backend/tools/: CMakeLists.txt
backend/tools/driver/: CMakeLists.txt  Driver.cpp
examples/: array.t  assign.t  break.t  continue.t  divide.t  if.t  invalid_var.t  op.t  simple.tlang  while.t
examples/ir/: first.ir
examples/llvm/: first.ir
frontend/: ast.ml  dune  env.ml  error_msg.ml  error_msg.mli  frontend.proto  frontend_pb.ml  frontend_pb.mli  frontend_pp.ml  frontend_pp.mli  frontend_types.ml  frontend_types.mli  ir_gen.ml  ir_gen_env.ml  lexer.mll  parser.mly  semant.ml  symbol.ml  translate.mli  types.ml  types.mli
frontend/docs/: grammar.y
lib/: dune
parser/: dune  lexer.mll  parser.mly
phase4/: methodDecl.ll
scripts/: run_e2e.sh
test/: dune
test/e2e/: addConstants.ll.expected  arr2d.ll  arr2d.ll.expected  arr2d.t  arr3d.ll.expected  arr3d.out.expected  arr3d.t  array.ll  array.ll.expected  array.out.expected  arrayAssign.err.expected  arrayCast.err.expected  arrayCreation.ll.expected  arrayDecl.ll.expected  arrayLength.ll.expected  arrayMultiD.ll.expected  arrayRuntimeAssign.ll.expected  arrayRuntimeCast.err.expected  arrayRuntimeCast.ll.expected  arrayRuntimeCast.out.expected  badClassCast.ll.expected  badClassCast.out.expected  badIntegerLiteral.err.expected  castClassErr.err.expected  casterror.err.expected  casterror.t  castruntimeerr.ll.expected  castruntimeerr.out.expected  castruntimeerr.t  classCast.ll.expected  classCast.out.expected  classCast.t  constructor.ll.expected  constructor.t  constructorCall.ll.expected  constructorCall.out.expected  constructorCall2.ll.expected  constructorDecl.ll.expected  constructorImplicitRet.ll.expected  constructorImplicitRet.t  (+76 more)
tiger/: ast.ml  dune  json.ml  lexer.mll  main.ml  parser.mly
tlang/: ast.ml  dune  env.ml  error_msg.ml  error_msg.mli  frontend_pb.ml  frontend_pb.mli  frontend_types.ml  ir_gen.ml  lexer.mll  parser.mly  semant.ml  symbol.ml  temp.ml  translate.mli  types.ml  types.mli
tlang/docs/: grammar.y
